<resources>
    <string name="app_name">MyTrip</string>
    <string name="nome">Nome completo</string>
    <string name="email">Email de contato</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="calcular">Calcular</string>
    <string name="campos_invalidos">Por favor, preencha todos os campos necessários!</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="kms_por_litro">KM\'s por litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
</resources>
