<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightGray"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorPrimaryDark"/>

        <EditText
                android:id="@+id/editNome"
                style="@style/customEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/nome"
                android:maxLength="35"
                android:gravity="center"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:text="@string/nome"
                android:textAllCaps="true"
                android:textColor="@color/colorDarkGray"
                android:textSize="18sp"/>

        <EditText
                android:id="@+id/editEmail"
                style="@style/customEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:gravity="center"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textColor="@color/colorDarkGray"
                android:textSize="18sp"/>

        <EditText
                android:id="@+id/editDistance"
                style="@style/customEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/distancia"
                android:inputType="number"
                android:maxLength="5"
                android:gravity="center"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:text="@string/total_de_quilometros"
                android:textAllCaps="true"
                android:textColor="@color/colorDarkGray"
                android:textSize="18sp"/>

        <EditText
                android:id="@+id/editPrice"
                style="@style/customEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/preco"
                android:inputType="numberDecimal"
                android:maxLength="6"
                android:gravity="center"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:text="@string/preco_por_litro"
                android:textAllCaps="true"
                android:textColor="@color/colorDarkGray"
                android:textSize="18sp"/>

        <EditText
                android:id="@+id/editAutonomy"
                style="@style/customEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/autonomia"
                android:inputType="number"
                android:maxLength="5"
                android:gravity="center"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:text="@string/kms_por_litro"
                android:textAllCaps="true"
                android:textColor="@color/colorDarkGray"
                android:textSize="18sp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:text="@string/gasto_total"
                android:textAllCaps="true"
                android:textSize="18dp"/>

        <TextView
                android:id="@+id/textResult"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="R$ 0,00"
                android:textSize="35sp"
                android:textAllCaps="true"
                android:textColor="@color/colorLigthRed"/>

        <Button
                android:id="@+id/buttonCalculator"
                android:background="@drawable/round_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:padding="20dp"
                android:textAllCaps="true"
                android:textColor="@color/colorLightGray"
                android:text="@string/calcular"/>

    </LinearLayout>

</ScrollView>